# cuda-optim

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  utils.cuh
csrc/: utils.h
csrc/elementwise/: elementwise.cpp
csrc/experimental/: experimental.cpp
csrc/sgemm/: kernel2.cc  kernel4.cc  kernel6.cc  kernel7.cc  sgemm.cc  sgemm.cpp
csrc/sgemm/cuda/: 128x128x16.cu  128x128x8_cg.cu  naive.cu  onedim_tile.cu  siboehm.cu  vectorize.cu  warptile_no_cg.cu
csrc/sgemm/cutlass/: ampere_sgemm_128x32_3stage.cu  ampere_sgemm_128x32_db_pipe.cu  naive.cu  pipeline_nodb_g2r.cu  sgemm_128x16_pipe.cu  tutorial.cc
csrc/transpose/: transpose.cpp
kernel/: cuda_debug_print.txt
kernel/gemm/1_naive/: naive  naive.cu
kernel/gemm/3_shared_mem/: shared_mem  shared_mem.cu
kernel/gemm/4_onedim_blocktile/: onedim_blocktile  onedim_blocktile.cu
scripts/: lock_clocks.sh  reset_clocks.sh
src/: gemm.cc  kernels.hh  timer.hh  utils.cuh  utils.hh
src/gemm/: gemm.cc  gemm.cu  kernels.cuh  kernels.hh  main.cu  timer.cuh
src/gemm/kernel/: 0_naive.cuh  0_naive.hh  1_shared_mem.cuh  1_smem.hh  2_1dim_threadtile.hh  2_onedim_blocktile.cuh  3_2dim_threadtile.hh  3_twodim_blocktile.cuh  4_twodim_blocktile_vectorized.cuh  4_vectorize.hh  5_warptile.cuh  5_warptile.hh  x_cublas.cuh
src/kernel/: 0_naive.hh  1_smem.hh  2_1dim_threadtile.hh  3_2dim_threadtile.hh  4_vectorize.hh  5_warptile.hh  x_cublas.hh
